[package]
name = "custom_widget"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
iced = { version = "0.1", features = ["canvas", "image"] }
iced_native = "0.2" # { path = "../../native" }
iced_wgpu = "0.2" # { path = "../../wgpu" }
rand = "0.7"
